--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,8 +1,8 @@
 version: "2"
 sql:
-  - engine: "sqlite"
-    queries: "./db/query/query.sql"
-    schema: "./db/query/schema.sql"
+  - engine: "postgresql"
+    queries: "db/query/"
+    schema: "db/migrations/"
     gen:
       go:
         package: "generated"
