--- a/.air.toml
+++ b/.air.toml
@@ -10,7 +10,7 @@ tmp_dir = "tmp"
   exclude_regex = [".*_templ.go"]
   exclude_unchanged = false
   follow_symlink = false
-  full_bin = ""
+  full_bin = "export $(cat .env | xargs) && ./tmp/main"
   include_dir = []
   include_ext = ["go", "tpl", "tmpl", "templ", "html", "css"]
   kill_delay = "0s"
